--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>TrackFusion</h1>
-        <p>Merge your favorite songs into a single file quickly and easily.</p>
+        <p>Merge your favorite songs into a single file quickly, easily, and TOTALLY FREE!</p>
         
         <div class="upload-section">
             <i class="fas fa-upload upload-icon"></i>
@@ -39,12 +39,40 @@
             <h3>How to Use</h3>
             <p>Select the audio files you want to merge. Click "Merge Files" to process them. Once done, you can listen to the merged audio and download it.</p>
         </div>
+
+        <div class="project-info">
+            <h3>Project Information</h3>
+            <p>TrackFusion is a simple tool for merging audio files into one. It was created to make combining multiple tracks quick and easy without requiring any special software. Enjoy seamless audio merging with just a few clicks!</p>
+        </div>
+
+        <div class="faq">
+            <h3>FAQ</h3>
+            <div class="faq-item">
+                <h4>How long does it take to merge the files?</h4>
+                <p>The time required depends on the length and number of audio files. Generally, it should be a quick process, but larger files may take more time.</p>
+            </div>
+            <div class="faq-item">
+                <h4>What formats are supported?</h4>
+                <p>Currently, only common audio formats like MP3, WAV, and OGG are supported. Make sure your files are in one of these formats.</p>
+            </div>
+            <div class="faq-item">
+                <h4>Can I edit the merged audio?</h4>
+                <p>This tool only merges audio files. If you need to edit the merged audio, you may use additional audio editing software like Audacity.</p>
+            </div>
+        </div>
+
+        <div class="news-section">
+            <h3>Updates and News</h3>
+            <div class="update-item">
+                <h4>Version 1.1 - September 03, 2024</h4>
+                <p>Introduced a new user interface and added support for additional audio formats</p>
+            </div>
+            <div class="update-item">
+                <h4>Version 1.0 - September 03, 2024</h4>
+                <p>Initial release of TrackFusion with basic audio merging functionality.</p>
+            </div>
+        </div>
     </div>
-
-    <footer>
-        <p>&copy; 2024 TrackFusion. All rights reserved. | <a href="mailto:observergamermc@gmail.com">Contact Us</a></p>
-    </footer>
-
     <script src="app.js"></script>
 </body>
 </html>
